# PyMPC

./: .gitignore  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SOLVER_FIXES_REPORT.md  COMPLETE_SYSTEM_READY.md  COMPREHENSIVE_TEST_SUMMARY.md  CONSTRAINT_VALIDATION_REPORT.md  CONTOURING_CONSTRAINTS_AND_PERFORMANCE_FIXES.md  CONTOURING_CONSTRAINTS_FIXES.md  CONVERSION_SUMMARY.md  CPP_SCENARIO_MODULE_ANALYSIS.md  CURVING_ROAD_TESTS_SUMMARY.md  FINAL_CONVERSION_REPORT.md  FINAL_FIXES_AND_REPLACEMENTS_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PROGRESS_REPORT.md  GOAL_PROGRESSION_FIXES.md  GOAL_REACHING_ANALYSIS.md  HALFSPACE_IMPLEMENTATION_SUMMARY.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CONFIRMATION_REPORT.md  MOVING_OBSTACLE_IMPROVEMENTS.md  PATH_FOLLOWING_ISSUES_RESOLVED.md  README.md  REALTIME_VISUALIZATION_SUMMARY.md  REWORK_PROGRESS_SUMMARY.md  SAMPLING_VERIFICATION_REPORT.md  SCENARIO_CONSTRAINTS_REWORK_PLAN.md  SCENARIO_CONSTRAINT_ANALYSIS.md  SCENARIO_CONTOURING_TEST_FIXES.md  SOLVER_FAILURE_DIAGNOSIS.md  SOLVER_FIXES_SUMMARY.md  SPLINE_ARCHITECTURE.md  STANDARDIZED_SYSTEMS_GUIDE.md  STANDARDIZED_SYSTEMS_SUMMARY.md  STANDARDIZED_TESTING_SUMMARY.md  TEST_CLEANUP_COMPLETE.md  TEST_REPLACEMENT_REPORT.md  (+40 more)
config/: CONFIG.yml  CONFIG_FAST.yml  model_map.yml
cpp_mpc/: CMakeLists.txt  Makefile  README.md
cpp_mpc/cmake/: scenario_mpc-config.cmake.in
cpp_mpc/examples/: ascii_visualize.cpp  demo_visualization.cpp  example_mpc.cpp  visualize_contouring.py  visualize_ot_predictor.py  visualize_paper_figures.py  visualize_trajectory.py  visualize_uncertainty_limits.py
cpp_mpc/include/: collision_constraints.hpp  config.hpp  contouring_mpc.hpp  dynamics.hpp  mode_weights.hpp  mpc_controller.hpp  optimal_transport_predictor.hpp  qp_solver.hpp  reference_path.hpp  scenario_pruning.hpp  scenario_sampler.hpp  trajectory_moments.hpp  types.hpp
cpp_mpc/src/: collision_constraints.cpp  contouring_mpc.cpp  dynamics.cpp  mode_weights.cpp  mpc_controller.cpp  optimal_transport_predictor.cpp  qp_solver.cpp  reference_path.cpp  scenario_pruning.cpp  scenario_sampler.cpp  trajectory_moments.cpp
cpp_mpc/tests/: test_core.cpp  test_epsilon_guarantee.cpp  test_mode_coverage.cpp  test_optimal_transport.cpp  test_ot_dynamics_verification.cpp  test_ot_predictor_integration.cpp  test_paper_figures.cpp  test_safe_horizon_contouring.cpp  test_sqp_comparison.cpp  test_uncertainty_limits.cpp
examples/: __init__.py  performance_modes_example.py  scenario_integration_example.py
examples/advanced/: test_curving_road.py  test_realtime_visualization.py
examples/basic/: simple_mpcc_example.py  test_visualization_framework.py
examples/mpcc/: test_manual_path_following.py  test_simple_path_following.py  working_mpcc_demo.py
helpers/cfg/: .cfg
modules/: config_helper.py
modules/constraints/: base_constraint.py  contouring_constraints.py  decomp_constraints.py  ellipsoid_constraints.py  gaussian_constraints.py  guidance_constraints.py  linearized_constraints.py  obstacle_constraint.py  safe_horizon_constraint.py  safe_horizon_diagnostics.py  scenario_constraint.py  scenario_constraints.py
modules/objectives/: base_objective.py  contouring_objective.py  control_effort_objective.py  control_jerk_objective.py  goal_objective.py  path_reference_velocity_objective.py
planner/: data_prep.py  planner.py  util.py
planner/src/: data_prep.py  dynamic_models.py  planner.py  types.py
planner/test/: data_prep_test.py  planner_test.py  spline_test.py
planner_modules/: base_constraint.py  contouring.py  contouring_constraints.py  curvature_aware_contouring.py  decomp_constraints.py  ellipsoid_constraints.py  gaussian_constraints.py  goal_module.py  guidance_constraints.py  linearized_constraints.py  mpc_base.py  path_reference_velocity.py  scenario_constraint.py  scenario_constraints.py  trajectory_objective.py
planner_modules/test/: contouring_test.py  decomp_test.py  ellipsoid_test.py  gaussian_test.py  goal_test.py  guidance_test.py  linearized_test.py  path_reference_velocity_test.py  safe_horizon_test.py  scenario_test.py
planner_types/: data_types.py  module_data.py
planning/: diagnostics.py  dynamic_models.py  modules_manager.py  obstacle_manager.py  parameter_manager.py  planner.py  scenario_adapter.py  types.py  types_impl.py
planning/src/: data_prep.py  dynamic_models.py  planner.py  types.py
planning/test/: data_prep_test.py  planner_test.py
planning/types/: __init__.py  data.py  state.py  (+1 more)
pympc/: __init__.py  cli.py  config.py  exceptions.py  factory.py  logging.py  registry.py  runner.py
rc_car_server/: __init__.py  car_client.py  config.yaml  mpc_controller.py  server.py  test_server.py  vicon_interface.py
ros_navigation/: ros2_navigation_planner_plugin.xml
scenario_mpc/: __init__.py  collision_constraints.py  config.py  dynamics.py  mode_weights.py  mpc_controller.py  scenario_pruning.py  scenario_sampler.py  solver.py  trajectory_moments.py  types.py
solver/: __init__.py  base_solver.py  casadi_solver.py  osqp_solver.py  performance_optimizations.py  solver_interface.py  state.py  warmstart.py
solver_generator/: control_modules.py  generate_acados_solver.py  generate_cpp_files.py  generate_forces_solver.py  generate_solver.py  modules_manager.py  solver_config.py  solver_definition.py  solver_model.py  spline.py
test/: __init__.py  conftest.py  mpcc_test_framework.py  run_mpcc_tests.py  run_tests.py  simple_framework.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py
utils/: CONFIG.yml  __init__.py  advanced_visualizer.py  const.py  debugging_tools.py  decomposition.py  demo_framework.py  logger.py  math_tools.py  math_tools_impl.py  math_utils.py  migrate_to_standardized.py  parameter_map.yml  performance_monitor.py  realtime_visualizer.py  run_hardware_mpc.py  solver_settings.yml  solver_utils.py  standardized_logging.py  standardized_visualization.py  test_config.py  utils.py  vicon_connector.py  visualizer.py  visualizer_compat.py
(+745 files in other folders)
